syntax = "proto3";
package lavanet.lava.pairing;

option go_package = "github.com/lavanet/lava/x/pairing/types";
import "gogoproto/gogo.proto";
import "epochstorage/endpoint.proto";

message StaticProvidersList {
  string chain_id = 1;
  string description = 2;
  repeated GeoLocation geolocations = 3;
  }

message GeoLocation {
  uint64 geo_location = 1;
  repeated ProviderInfo providers = 2;
  }

message ProviderInfo {
  string address = 1;
  repeated lavanet.lava.epochstorage.Endpoint endpoints = 2 [(gogoproto.nullable) = false]; 
  uint64 expiration_epoch = 3;
  }